# extrag

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  test_walk.rs
api/: Cargo.toml  Dockerfile
api/src/: main.rs  routes.rs  telemetry.rs
etl/: Cargo.toml
etl/src/: file_extractor.rs  lib.rs  ocr.rs  parsers.rs
extrag-core/: Cargo.toml
extrag-core/src/: chunker.rs  error.rs  etl.rs  lib.rs  memrl_tests.rs  ollama.rs  payload.rs  qdrant.rs  test_utils.rs  vector_store.rs
extrag-core/src/embeddings/: mod.rs
extrag-core/src/llm/: mod.rs
extrag-core/src/reranker/: mod.rs
rag/: Cargo.toml
rag/src/: ingestion.rs  lib.rs  retrieval.rs  sync_state.rs
web/: index.html
web/css/: styles.css
web/js/: app.js
