[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
etl = { version = "0.1.0", path = "../etl" }
extrag-core = { version = "0.1.0", path = "../extrag-core" }
rag = { version = "0.1.0", path = "../rag" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "fs", "cors"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
