[package]
name = "etl"
version = "0.1.0"
edition = "2024"

[dependencies]
extrag-core = { path = "../extrag-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = "1.5"
tracing = { workspace = true }
walkdir = "2.5.0"
pdf_oxide = "0.3"
pdfium-render = "0.8"
ocrs = "0.1"
rten = "0.1"
rten-tensor = "0.1"
image = "0.25"
