[package]
name = "rag"
version = "0.1.0"
edition = "2024"

[dependencies]
extrag-core = { path = "../extrag-core" }
etl = { path = "../etl" }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
